avoid crash on re-open already running session just quit kate do check all return values properly

BUG: 390740